Add ninja avatar

--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -106,6 +106,13 @@
   height: 60px;
 }
 
+.avatar-editor-current.eleven {
+  background: url(../Game/pcs/char11/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .avatar-editor-current.seven {
   background: url(../Game/pcs/char7/stand.png);
   image-rendering: pixelated;
