--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -147,6 +147,14 @@
   width: 33px;
 }
 
+.header-avatar.twelve {
+  background: url(./pcs/char12/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 33px;
+}
+
 .hearts-and-timer {
   display: grid;
   grid-template-columns: 1fr 300px 1fr;
