--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -173,6 +173,13 @@
   background-repeat: no-repeat;
 }
 
+.student-dash-avatar.twelve {
+  background: url(../Game/pcs/char12/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .hearts-and-timer {
   display: grid;
   grid-template-columns: 1fr 300px 1fr;
