Edit width on avatar 3

--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -63,6 +63,7 @@
   image-rendering: pixelated;
   background-size: cover;
   background-repeat: no-repeat;
+  width: 35px;
 }
 
 .avatar-editor-current.four {
