Add click-to-exit on GameOver component

--- a/src/components/GameOver/GameOver.css
+++ b/src/components/GameOver/GameOver.css
@@ -44,6 +44,12 @@
   top: 200px;
 }
 
+.exit-message {
+  margin-top: 150px;
+  font-family: "chronotype";
+  font-size: 1.4rem;
+}
+
 @keyframes slide-in-victory {
   0% {
     left: -300px;
