--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -105,6 +105,7 @@
   image-rendering: pixelated;
   background-size: cover;
   background-repeat: no-repeat;
+  width: 35px;
 }
 
 .student-dash-avatar.four {
@@ -384,7 +385,8 @@
 
 .times-row {
   display: flex;
-  margin-left: 3rem;
+  margin: 0rem 3rem;
+  justify-content: space-between;
 }
 
 .time-container {
@@ -394,7 +396,12 @@
 .time-label {
   font-size: 1.3rem;
   margin-top: 0;
+  margin-bottom: 0.3rem;
   text-align: start;
+}
+
+.time-displayed {
+  margin: 0;
 }
 
 .badge-row {
