Add mqs for StudentAccount and child components

--- a/src/components/ChangePassword/ChangePassword.css
+++ b/src/components/ChangePassword/ChangePassword.css
@@ -43,3 +43,18 @@
   padding-top: 1.3rem;
   margin: 0;
 }
+
+@media (max-width: 770px) {
+  .change-password-form {
+    padding-left: 1rem;
+    display: block;
+  }
+
+  .change-password-form input {
+    margin: 0;
+  }
+
+  .change-password-form input {
+    width: 140px;
+  }
+}
