--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -209,3 +209,12 @@
   margin-bottom: 2rem;
   font-size: 1.3rem;
 }
+
+@media (max-width: 770px) {
+  .avatar-right-arrow {
+    right: 20px;
+  }
+  .avatar-left-arrow {
+    left: 20px;
+  }
+}
