--- a/src/components/EditProfile/EditProfile.css
+++ b/src/components/EditProfile/EditProfile.css
@@ -48,3 +48,22 @@
     opacity: 1;
   }
 }
+
+@media (max-width: 770px) {
+  .edit-profile-form {
+    padding-left: 1rem;
+    display: block;
+    grid-template-columns: 130px 1fr;
+    animation: account-subsection-fade-in 0.3s linear;
+  }
+
+  .edit-profile-form input {
+    width: 140px;
+    margin-top: 0;
+  }
+
+  .profile-submit-btn {
+    margin: 1rem 0rem;
+    grid-column: 1;
+  }
+}
