--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -2,6 +2,10 @@
   overflow: hidden;
   height: 100vh;
   animation: fade-in-game 0.5s linear;
+  -webkit-animation: fade-in-game 0.5s linear;
+  -moz-animation: fade-in-game 0.5s linear;
+  -o-animation: fade-in-game 0.5s linear;
+
   opacity: 1;
 }
 
@@ -273,5 +277,34 @@
 
   .game-user-modal {
     z-index: 1000;
+  }
+}
+
+/* -- VENDOR PREFIXES --  */
+
+@-webkit-keyframes fade-in-game {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fade-in-game {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fade-in-game {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
