--- a/src/components/Monster/MonsterAnims/Phoenix.css
+++ b/src/components/Monster/MonsterAnims/Phoenix.css
@@ -12,22 +12,187 @@
 
 .phoenix.idle {
   animation: phoenix-idle infinite 2s linear;
+  -webkit-animation: phoenix-idle infinite 2s linear;
+  -moz-animation: phoenix-idle infinite 2s linear;
+  -o-animation: phoenix-idle infinite 2s linear;
 }
 
 .phoenix.attack {
   animation: phoenix-idle infinite 2s linear, monster-attack 1s linear;
+  -webkit-animation: phoenix-idle infinite 2s linear, monster-attack 1s linear;
+  -moz-animation: phoenix-idle infinite 2s linear, monster-attack 1s linear;
+  -o-animation: phoenix-idle infinite 2s linear, monster-attack 1s linear;
 }
 
 .phoenix.hit {
   animation: phoenix-idle infinite 2s linear, monster-hit 1s linear;
+  -webkit-animation: phoenix-idle infinite 2s linear, monster-hit 1s linear;
+  -moz-animation: phoenix-idle infinite 2s linear, monster-hit 1s linear;
+  -o-animation: phoenix-idle infinite 2s linear, monster-hit 1s linear;
 }
 
 .phoenix.dead {
   opacity: 0;
   animation: phoenix-idle infinite 2s linear, monster-dead 3s linear;
+  -webkit-animation: phoenix-idle infinite 2s linear, monster-dead 3s linear;
+  -moz-animation: phoenix-idle infinite 2s linear, monster-dead 3s linear;
+  -o-animation: phoenix-idle infinite 2s linear, monster-dead 3s linear;
 }
 
 @keyframes phoenix-idle {
+  0% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25.01% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50.01% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75.01% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  100% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+}
+
+@-webkit-keyframes phoenix-idle {
+  0% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25.01% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50.01% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75.01% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  100% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+}
+
+@-moz-keyframes phoenix-idle {
+  0% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  25.01% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50% {
+    background: url("../monsters/phoenix/monster2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  50.01% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75% {
+    background: url("../monsters/phoenix/monster1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  75.01% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+  100% {
+    background: url("../monsters/phoenix/monster3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+}
+
+@-o-keyframes phoenix-idle {
   0% {
     background: url("../monsters/phoenix/monster1.png");
     background-repeat: no-repeat;
