Add animation/transform vendor-pres

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,5 +1,8 @@
 .player {
   transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
 
   position: absolute;
   height: 144px;
