--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -8,6 +8,10 @@
 
 .snow-backer {
   animation: snow 90s infinite linear;
+  -webkit-animation: snow 90s infinite linear;
+  -moz-animation: snow 90s infinite linear;
+  -o-animation: snow 90s infinite linear;
+
   position: absolute;
   height: 6000px;
   width: 10000px;
@@ -36,6 +40,10 @@
   z-index: 1000;
   box-shadow: 2px 2px 2px rgba(0, 0, 0.3);
   animation: student-dash-slide 0.3s linear;
+  -webkit-animation: student-dash-slide 0.3s linear;
+  -moz-animation: student-dash-slide 0.3s linear;
+  -o-animation: student-dash-slide 0.3s linear;
+
   overflow: hidden;
 }
 
@@ -378,6 +386,81 @@
   }
 }
 
+@-webkit-keyframes snow {
+  0% {
+    top: -3000px;
+    left: -3000px;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+
+  32% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 0;
+    top: 0;
+    left: -1000px;
+  }
+  100% {
+    opacity: 0;
+    top: -3000px;
+    left: -3000px;
+  }
+}
+
+@-moz-keyframes snow {
+  0% {
+    top: -3000px;
+    left: -3000px;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+
+  32% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 0;
+    top: 0;
+    left: -1000px;
+  }
+  100% {
+    opacity: 0;
+    top: -3000px;
+    left: -3000px;
+  }
+}
+
+@-o-keyframes snow {
+  0% {
+    top: -3000px;
+    left: -3000px;
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+
+  32% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 0;
+    top: 0;
+    left: -1000px;
+  }
+  100% {
+    opacity: 0;
+    top: -3000px;
+    left: -3000px;
+  }
+}
+
 .fastest-times {
   text-align: start;
   margin: 3rem 0 0 3rem;
@@ -528,6 +611,33 @@
 }
 
 @keyframes student-dash-slide {
+  0% {
+    left: 3000px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+
+@-webkit-keyframes student-dash-slide {
+  0% {
+    left: 3000px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+
+@-moz-keyframes student-dash-slide {
+  0% {
+    left: 3000px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+
+@-o-keyframes student-dash-slide {
   0% {
     left: 3000px;
   }
